fix French missing new lines
fix time limit not triggering the warning if it's initially 100 or less; also infinite time is now 0, instead of -1

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -30,7 +30,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 3.8\n"
+"X-Generator: Poedit 3.7\n"
 
 #: stages/main_menu/prototype_menu.gd modules/editor/classes/LevelEditor.gd
 msgid "Failed to load: Data is corrupted"
@@ -74,7 +74,6 @@ msgid ""
 msgstr ""
 "ceci est un aperçu de la version publique non-terminée de l'éditeur de "
 "niveau.\n"
-" \n"
 "le prototype présenté peut être complètement différent de la version "
 "finale.\n"
 "les niveaux créés dans cette version ne chargeront pas dans les autres "
@@ -393,8 +392,8 @@ msgid ""
 "Warning: You have unsaved changes.\n"
 "Save before quitting?"
 msgstr ""
-"Attention : Changements non sauvegardés détectés. Voulez-vous sauvegarder "
-"avant de fermer ?"
+"Attention : Changements non sauvegardés détectés.\n"
+"Voulez-vous sauvegarder avant de fermer ?"
 
 #: modules/editor/stages/level_editor.tscn
 msgid ""
@@ -443,7 +442,9 @@ msgstr ""
 msgid ""
 "Erase objects\n"
 "with right click"
-msgstr "Efface les objets avec clic droit"
+msgstr ""
+"Efface les objets\n"
+"avec clic droit"
 
 #: modules/editor/stages/level_editor.tscn
 msgid ""
@@ -461,7 +462,9 @@ msgstr ""
 msgid ""
 "Right click erases\n"
 "only same object"
-msgstr "Le clic droit n'efface que le même objet"
+msgstr ""
+"Le clic droit n'efface\n"
+"que le même objet"
 
 #: modules/editor/stages/level_editor.tscn
 msgid ""
@@ -491,7 +494,9 @@ msgstr "Autres"
 msgid ""
 "Level\n"
 "Section"
-msgstr "Selection du Niveau"
+msgstr ""
+"Selection\n"
+"du Niveau"
 
 #: modules/editor/stages/level_editor.tscn
 msgid "1"
