feat: human lab enemies; lakitu icons
Also remove subcategory sorting

--- a/locale/object_names_bonus.ini
+++ b/locale/object_names_bonus.ini
@@ -1,5 +1,5 @@
 [bonus]
-Other
+Collectibles
 Beetroot
 Boomerang Flower
 Containers
@@ -8,8 +8,11 @@ Coin
 Fire Flower
 Frog Suit
 Green Lui
+Ice Flower
 Life Mushroom
 Poisonous Mushroom
 Super Mushroom
 Question Block
+Other
+Springboard
 Super Star
