--- a/locale/object_names_enemy.ini
+++ b/locale/object_names_enemy.ini
@@ -3,6 +3,13 @@ Other
 Fire Bros
 Hammer Bros
 Buzzy Beetle
+Human Laboratory
+Clone 01
+Clone 3-A
+Big Human Clone B
+Coder Clone B
+Jaws Clone
+Jaws Clone Head
 Dry Bones
 Underwater
 Electric Coral
@@ -19,7 +26,8 @@ Koopa Green
 Koopa Red
 Koopa Yellow
 Lakitu
-Lakitu (Dark)
+Lakitu (Spiny Gray)
+Lakitu (Spiny Green)
 Lakitu (Hardcore Worlds)
 Koopa Paratroopa Blue
 Koopa Paratroopa Green
